/*
 * Copyright 2018 Mycos authors.
 */

 syntax = "proto3";

package susu;

import "google/protobuf/timestamp.proto";
import "google/types/latlng.proto";

message Chef {
  string first_name = 1;
  string middle_name = 2;
  string last_name = 3;
  string nickname = 4;
}

message Address {
  string address_one = 1; 
  string address_two = 2; 
  string address_three = 3; 
  string estate = 4; 
  string city = 5; 
  string province = 6; 
  string country = 7; 
  string image_ref = 9;
}


  // Status of a chef.
  enum ChefRegistrationStatus {

    UNKNOWN = 0;

    REGISTRATION_IN_PROGRESS = 1;

    REGISTRATION_COMPLETED = 2;

    ACTIVE = 4;

    REJECTED = 5;

    DEACTIVATED = 6;

    CANCELLED = 7;

  }


 // SusuRequest is the request for echo.
 message SusuRequest {
   string message = 1;
 }

 // SusuResponse is the response for echo.
 message SusuResponse {
   string message = 1;
 }

 // Susu is the echo service.
 service Susu {
   // UnarySusu is unary echo.
   rpc UnarySusu(SusuRequest) returns (SusuResponse) {}
   // ServerStreamingSusu is server side streaming.
   rpc ServerStreamingSusu(SusuRequest) returns (stream SusuResponse) {}
   // ClientStreamingSusu is client side streaming.
   rpc ClientStreamingSusu(stream SusuRequest) returns (SusuResponse) {}
   // BidirectionalStreamingSusu is bidirectional streaming.
   rpc BidirectionalStreamingSusu(stream SusuRequest) returns (stream SusuResponse) {}
 }
